--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -29,6 +29,7 @@
 <p>5月6日新确诊了2,253例病例。</p>
 <p>数据显示，截至周一，患者总数达到349,519人。 </p>
 <p>数据还显示，过去24小时内新增了75人死亡，也达到5月初以来的单日最高水平，使死亡总人数升至9,371人。</p>
+<p>为减缓病毒的传播，土耳其于今年早些时候实行了周末封锁，限制城市间旅行并关闭餐馆和咖啡馆。6月份，几乎所有限制都被取消。 此后，政府实施了社交疏离和戴口罩等措施，并对违反规定者处以罚款。</p>
 <h3>黎巴嫩安全总局局长病毒检测呈阳性</h3>
 <p>黎巴嫩安全总局的办公室周一宣布，局长阿巴斯·易卜拉欣（Abbas Ibrahim）在访问华盛顿期间，他的Covid-19检测结果呈阳性反应。</p>
 <p>发到脸书上的帖子说，阿巴斯·易卜拉欣少将在华盛顿接受了冠状病毒（中共病毒）检测，结果呈阳性反应。易卜拉欣原定在访华盛顿之后，在巴黎举行会议，但现在已被取消该会议。</p>
@@ -138,7 +139,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/22/n11888452.md#1" target="_blank">“土改”和“文革”时的离奇报应</a></li><li><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/9/n10770724.md#1" target="_blank">裴毅然：毛泽东真诚“感谢皇军”</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
