--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -2,9 +2,9 @@
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/24/n12428225.md#1" target="_blank"> 飞蚊症4征兆要警惕！飞蚊症状、成因和治疗全图解</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/24/n12428225.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/eye-Floaters-00-web-tj-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/4/n12381311.md#1" target="_blank"> 骨质疏松症4大症状 背痛别忽略！3招有效防骨松</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/4/n12381311.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/Osteoporosis-examination-diagnose-web00-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/11/n12397483.md#1" target="_blank"> 掉发原因有3种！中医4招防掉发 长回浓密黑发</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/11/n12397483.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/hair-loss-prevention-treatment-001web-health11-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488570.md#1" target="_blank"> 日本超级电脑显示 中共病毒如何在用餐时传播</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488570.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/corona-5174671_1920-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/16/n12479453.md#1" target="_blank"> 73岁身体强健、一躺就睡 名医分享养生4招</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/16/n12479453.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/traditional-medicine-hnw1019-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/15/n12478565.md#1" target="_blank"> 耳鸣70%有自律神经失调！5招改善耳鸣耳聋</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/15/n12478565.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/ear-tinnitus-0-1013-health11-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/12/n12471132.md#1" target="_blank"> 1张纸改善视力！胡乃文推荐3碗药膳 养眼补肾</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/12/n12471132.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/eyesight-chinese-medicine0-1013-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/29/n12439663.md#1" target="_blank">提早发育会长不高吗？孩子性早熟有4个原因</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/29/n12439663.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/shutterstock_1425461492-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/30/n12443080.md#1" target="_blank">【直播】乳房有硬块是癌症？名医教你抗乳癌</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/30/n12443080.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/breast-cancer-10.3.20-health11-live-thumnail-web-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/15/n12405683.md#1" target="_blank">重训选哪种？五大重点一篇看懂</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/15/n12405683.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training_138319607-320x200.jpg"></a></td></tr>
